@@ -20,7 +20,9 @@ package com.sshtools.client;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashSet;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -52,7 +54,7 @@ public class AuthenticationProtocolClient implements Service {
 	TransportProtocolClient transport;
 	SshClientContext context;
 	String username;
-	List<ClientAuthenticator> authenticators;
+	LinkedList<ClientAuthenticator> authenticators = new LinkedList<>();
 	ClientAuthenticator currentAuthenticator;
 	Set<String> supportedAuths = null;
 	boolean authenticated = false;
@@ -79,6 +81,12 @@ public class AuthenticationProtocolClient implements Service {
 						if(!currentAuthenticator.isDone()) {
 							currentAuthenticator.failure();
 						}
+						currentAuthenticator = null;
+					}
+					authenticators.clear();
+					
+					if(!transport.getConnection().getAuthenticatedFuture().isDone()) {
+						transport.getConnection().getAuthenticatedFuture().done(false);
 					}
 					break;
 				default:
@@ -133,8 +141,6 @@ public class AuthenticationProtocolClient implements Service {
 					Log.debug("SSH_MSG_USERAUTH_FAILURE received auths=" + auths);
 				}
 	
-				boolean checkKBI = supportedAuths == null;
-				
 				StringTokenizer t = new StringTokenizer(auths, ",");
 				supportedAuths = new HashSet<String>();
 				
@@ -152,29 +158,19 @@ public class AuthenticationProtocolClient implements Service {
 					currentAuthenticator.failure();
 				}
 				
-				
-				if(checkKBI) {
-					checkForKeyboardInteractiveAuthentication();
-				}
-				
-				if(authenticators.size() > 0) {
-					doNextAuthentication();
-				}  else {
+				if(!doNextAuthentication()) {
 					transport.addTask(ExecutorOperationSupport.EVENTS, new ConnectionTaskWrapper(transport.getConnection(), new Runnable() {
 						public void run() {
 							List<ClientAuthenticator> auths = new ArrayList<ClientAuthenticator>();
 							for (ClientStateListener stateListener : context.getStateListeners()) {
 								stateListener.authenticate(AuthenticationProtocolClient.this, transport.getConnection(), supportedAuths, partial, auths);
-								authenticators.addAll(auths);
-							}
-							if(canAuthenticate()) {
 								try {
-									doNextAuthentication();
+									addAuthentication(context.getAuthenticators());
 								} catch (IOException | SshException e) {
 									Log.error("I/O error during authentication", e);
 									transport.disconnect(TransportProtocolClient.BY_APPLICATION, "I/O error during authentication");
 								}
-							} 
+							}
 						}
 					}));
 				}
@@ -202,67 +198,36 @@ public class AuthenticationProtocolClient implements Service {
 		}
 	}
 
-	private void checkForKeyboardInteractiveAuthentication() {
-		
-		int passwordIdx = -1;
-		boolean hasKBI = false;
-
-		int idx = 0;
-		for (ClientAuthenticator auth : authenticators) {
-			if (auth instanceof PasswordAuthenticator) {
-				passwordIdx = idx;
-			}
-			if (auth instanceof KeyboardInteractiveAuthenticator) {
-				hasKBI = true;
-			}
-			idx++;
-		}
-
-		/**
-		 * Inject KBI if user has not provided it so we can perform
-		 * password over KBI in preference to password.
-		 */
-		if (!hasKBI && passwordIdx > -1 && supportedAuths.contains("keyboard-interactive")) {
-			authenticators.add(passwordIdx, new KeyboardInteractiveAuthenticator(
-					new PasswordOverKeyboardInteractiveCallback(
-							(PasswordAuthenticator) authenticators
-									.get(passwordIdx))));
-		}
-		
-	}
-
 	public void start() throws SshException {
 
 		if(Log.isDebugEnabled()) {
 			Log.debug("Starting Authentication Protocol");
 		}
 
-		authenticators = new ArrayList<ClientAuthenticator>(
-				context.getAuthenticators());
-
 		try {
-			doAuthentication(noneAuthenticator);
+			authenticators.add(noneAuthenticator);
+			doNextAuthentication();
 		} catch (IOException e) {
 			Log.error("Faild to send none authentication request", e);
 			transport.disconnected();
 		}
 
 	}
-
-	private boolean canAuthenticate() {
-		return  authIndex < authenticators.size();
-	}
 	
-	public void doNextAuthentication() throws IOException, SshException {
+	public synchronized boolean doNextAuthentication() throws IOException, SshException {
 
-		if (canAuthenticate()) {
-			currentAuthenticator = authenticators.get(authIndex++);
-			currentAuthenticator.authenticate(transport, username);
-		} else {
-			if(authenticators.size() > 0) {
-				transport.getConnection().getAuthenticatedFuture().done(false);
+		if(!authenticators.isEmpty()) {
+			
+			currentAuthenticator = authenticators.removeFirst();
+			
+			if(Log.isDebugEnabled()) {
+				Log.debug("Starting {} authentication", currentAuthenticator.getName());
 			}
-		}
+			currentAuthenticator.authenticate(transport, username);
+			return true;
+		} 
+		
+		return false;
 	}
 
 	public void stop() {
@@ -287,11 +252,59 @@ public class AuthenticationProtocolClient implements Service {
 		return true;
 	}
 
-	public void doAuthentication(ClientAuthenticator authenticator) throws IOException, SshException {
-		currentAuthenticator = authenticator;
-		currentAuthenticator.authenticate(transport, username);
+	public synchronized void addAuthentication(Collection<ClientAuthenticator> auths) throws IOException, SshException {	
+		for(ClientAuthenticator auth : auths) {
+			addAuthentication(auth);
+		}
 	}
 	
+	public synchronized void addAuthentication(ClientAuthenticator authenticator) throws IOException, SshException {
+		
+		checkReady();
+		
+		if(Log.isDebugEnabled()) {
+			Log.debug("Adding {} authentication", authenticator.getName());
+		}
+		
+		boolean start = authenticators.isEmpty();
+		
+		if(authenticator instanceof PasswordAuthenticator) {
+			if(supportedAuths.contains("keyboard-interactive") &&
+					context.getPreferKeyboardInteractiveOverPassword()) {
+				
+				if(Log.isDebugEnabled()) {
+					Log.debug("We prefer keyboard-interactive over password so injecting keyboard-interactive authenticator");
+				}
+				authenticators.addLast(new KeyboardInteractiveAuthenticator(
+						new PasswordOverKeyboardInteractiveCallback(
+								(PasswordAuthenticator) authenticator)));
+				if(supportedAuths.contains("password")) {
+					authenticators.addLast(authenticator);
+				}
+			}
+			
+		} else {
+			authenticators.addLast(authenticator);
+		}
+
+		if(start) {
+			doNextAuthentication();
+		}
+		
+	}
+	
+	private void checkReady() throws IOException {
+		if(!noneAuthenticator.isDone()) {
+			noneAuthenticator.waitFor(30000);
+			if(!noneAuthenticator.isDone()) {
+				throw new IOException("Timeout waiting for authentication protocol to start");
+			}
+			if(Log.isDebugEnabled()) {
+				Log.debug("Authentication protocol is ready");
+			}
+		}
+	}
+
 	public Set<String> getSupportedAuthentications() {
 		return supportedAuths;
 	}
