@@ -2,8 +2,10 @@ Maverick Synergy 3.0.0-RC4 - TBC
 
 Features
     o Added shutdownAndExit method to SshEngine designed for calling before application shutdown (it is the applications responsibility to exit, this is just for clean up).
+    o Added context option to disable preference of using keyboard-interactive authentication over password.
     
 Bug Fixes
+    o Fixed race condition where authentication client can receive failure message from the none authenticator.
     o OpenSSH RSA certificate incorrectly attempted to be decoded as ECDSA.
     o NPE when DefaultLoggingContext.shutdown is called and no file watcher has been initialized.
     
